Modificar index en la rama desarrollo

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Mi Web Personal</title>
 </head>
 <body>
-    <header>Mi Pagina Personal</header>
+    <header>Bienvenidos a la Web de Carlos Peña</header>
 
     <h1>Información Personal</h1>
     
-
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate veritatis provident quasi aliquid laboriosam libero tempore animi fuga, sunt fugit? Aliquid quo error repellendus corrupti inventore, nostrum aspernatur temporibus dolores.</p>
     
 </body>
