Agregar H2 de Subtitulo

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate veritatis provident quasi aliquid laboriosam libero tempore animi fuga, sunt fugit? Aliquid quo error repellendus corrupti inventore, nostrum aspernatur temporibus dolores.</p>
     
+    <h2>CAMBIOS EN LA WEB</h2>
 </body>
 </html>
