Actulizando la web

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Web Personal</title>
+    <style>
+        
+        body{
+            background-color: rgb(221, 173, 115);
+        }
+
+    </style>
 </head>
 <body>
     <header>Bienvenidos a la Web de Carlos Peña</header>
